# NoteAPI

./: .gitignore  Dockerfile  dependencies.py  lib.py  main.py  models.py  pyproject.toml  session.py
.devcontainer/: Dockerfile  devcontainer.json
