[tool.poetry]
name = "rps-api"
version = "0.1.0"
description = ""
authors = ["Thephaseless <kukubaorch@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
